Fix spacing on sidebar ad

--- a/src/furo/assets/styles/extensions/_readthedocs.sass
+++ b/src/furo/assets/styles/extensions/_readthedocs.sass
@@ -2,4 +2,4 @@
 // contents would show up inside the theme.
 
 #furo-sidebar-ad-placement
-  padding: var(--sidebar-item-padding-vertical) var(--sidebar-item-padding-horizontal)
+  padding: var(--sidebar-item-spacing-vertical) var(--sidebar-item-spacing-horizontal)
